--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
         <p id="antrianSelesai">-</p>
       </div>
     </div>
+
+    <!-- Tambahan: Daftar Antrian Menunggu -->
+    <div class="queue-list">
+      <h2>Antrian Menunggu</h2>
+      <ul id="daftarAntrian"></ul>
+    </div>
   </div>
 
   <!-- Firebase SDK -->
