--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <p id="jam"></p>
     </div>
 
-    <h1>Selamat Datang di Numpang Ngopi.Crb</h1>
+    <h1>INFORMASI ANTRIAN NUMPANG NGOPI CRB</h1>
 
     <!-- Tombol Aksi -->
     <div class="button-group">
