--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <div style="max-width:380px;margin:0 auto;background:white;padding:12px;border-radius:6px;border:1px solid var(--border);">
       <div style="text-align:center">
         <h2 style="margin:4px 0">Numpang Ngopi.CRB</h2>
-        <div class="muted">Jalan Imajinasi • Cirebon</div>
+        <div class="muted"> Jl Kigede Mayaguna Cempaka • Cirebon</div>
         <hr style="margin:8px 0;border:none;border-top:1px dashed #ddd">
       </div>
       <div id="receiptBody"></div>
