Update lead paragraph with new year

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="logo">NN</div>
     <div>
       <h1>Numpang Ngopi.CRB — Transaksi</h1>
-      <p class="lead">Menu & transaksi — kompatibel Android • elegant (abu / hitam / putih)</p>
+      <p class="lead">Menu & transaksi — 2025 </p>
     </div>
   </header>
 
